Fix charts not showing up

--- a/client/css/summary.css
+++ b/client/css/summary.css
@@ -16,7 +16,7 @@ body {
 
 .total-value, .change {
 	position: absolute;
-	top: 500px;
+	top: 320px;
 	font-size: 48px;
 	height: 500px;
 	width: 625px;
